로그인/회원가입 초안 작성 (코드 예시)

--- a/infra/postgres/docker-compose.yml
+++ b/infra/postgres/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
   db:
     image: postgres:16
+    container_name: donakawa-postgres
     environment:
       POSTGRES_USER: donakawa
       POSTGRES_PASSWORD: umc_9th
