--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -49,13 +49,10 @@ jobs:
           scp -r ./[!.]* private:/opt/app/donakawa
       - name: Install dependencies
         run: |
-          export PATH="/home/ubuntu/.nvm/versions/node/v24.13.0/bin:$PATH"
-          ssh private 'npm ci --prefix /opt/app/donakawa'
+          ssh private 'export PATH="/home/ubuntu/.nvm/versions/node/v24.13.0/bin:$PATH" && npm ci --prefix /opt/app/donakawa'
       - name: Build codes
         run: |
-          export PATH="/home/ubuntu/.nvm/versions/node/v24.13.0/bin:$PATH"
-          ssh private 'npm build --prefix /opt/app/donakawa'
+          ssh private 'export PATH="/home/ubuntu/.nvm/versions/node/v24.13.0/bin:$PATH" && npm build --prefix /opt/app/donakawa'
       - name: Reload PM2 service
         run: |
-          export PATH="/home/ubuntu/.nvm/versions/node/v24.13.0/bin:$PATH"
-          ssh private 'cd /apt/app/donakawa && pm2 reload ecosystem.config.js -- env production'
+          ssh private 'export PATH="/home/ubuntu/.nvm/versions/node/v24.13.0/bin:$PATH" && cd /apt/app/donakawa && pm2 reload ecosystem.config.js -- env production'
