CI/CD 파이프라인 수정-6

--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -50,6 +50,9 @@ jobs:
       - name: Install dependencies
         run: |
           ssh private 'export PATH="/home/ubuntu/.nvm/versions/node/v24.13.0/bin:$PATH" && npm ci --prefix /opt/app/donakawa'
+      - name: Install dependencies
+        run: |
+          ssh private 'export PATH="/home/ubuntu/.nvm/versions/node/v24.13.0/bin:$PATH" && npx prisma generate --prefix /opt/app/donakawa'
       - name: Build codes
         run: |
           ssh private 'export PATH="/home/ubuntu/.nvm/versions/node/v24.13.0/bin:$PATH" && npm run build --prefix /opt/app/donakawa'
