--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -58,4 +58,4 @@ jobs:
           ssh private 'export PATH="/home/ubuntu/.nvm/versions/node/v24.13.0/bin:$PATH" && npm run build --prefix /opt/app/donakawa'
       - name: Reload PM2 service
         run: |
-          ssh private 'export PATH="/home/ubuntu/.nvm/versions/node/v24.13.0/bin:$PATH" && cd /apt/app/donakawa && pm2 reload ecosystem.config.js -- env production'
+          ssh private 'export PATH="/home/ubuntu/.nvm/versions/node/v24.13.0/bin:$PATH" && cd /opt/app/donakawa && pm2 reload ecosystem.config.js -- env production'
