CI/CD 파이프라인 구축-4

--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -35,6 +35,7 @@ jobs:
           path: artifact
   deploy-A:
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - name: Download artifact
         uses: actions/download-artifact@v4
