CI/CD 파이프라인 구축-5

--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -75,6 +75,7 @@ jobs:
       - name: Copy artifact to Server
         run: |
           ssh private 'sudo mkdir -p /opt/app/donakawa/incoming'
+          cd artifact
           rsync -az --delete \
             --exclude ".git" \
             --exclude "node_modules" \
