CI/CD 파이프라인 구축-7

--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -80,7 +80,7 @@ jobs:
             --exclude ".git" \
             --exclude "node_modules" \
             --exclude ".env" \
-            ./dist ./package.json ./package-lock.json ecosystem.config.js \
+            ./dist ./prisma ./package.json ./package-lock.json ecosystem.config.js \
             private:/opt/app/donakawa/incoming/
       - name: Switch Environment
         run: |
