🔧 settings: CI/CD 파이프라인 수정

--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -25,6 +25,7 @@ jobs:
         run: |
           mkdir -p artifact
           cp -r dist artifact/dist
+          cp -r node_modules artifact/node_modules
           cp package.json package-lock.json prisma.config.js artifact/
           if [ -f ecosystem.config.js ]; then cp ecosystem.config.js artifact/; fi
           if [ -d prisma ]; then cp -r prisma artifact/prisma; fi
@@ -153,9 +154,8 @@ jobs:
           cd artifact
           rsync -az --delete \
             --exclude ".git" \
-            --exclude "node_modules" \
             --exclude ".env" \
-            ./dist ./prisma ./package.json ./package-lock.json ecosystem.config.js \
+            ./dist ./prisma ./node_modules ./package.json ./package-lock.json ecosystem.config.js \
             private:/opt/app/donakawa/incoming/
       - name: Switch Environment
         run: |
@@ -165,12 +165,6 @@ jobs:
             rm -rf current
             mv incoming current
           '
-      - name: Install dependencies
-        run: |
-          ssh private 'export PATH="/home/ubuntu/.nvm/versions/node/v24.13.0/bin:$PATH" && npm ci --prefix /opt/app/donakawa/current --omit=dev'
-      - name: Prisma generation
-        run: |
-          ssh private 'export PATH="/home/ubuntu/.nvm/versions/node/v24.13.0/bin:$PATH" &&cd /opt/app/donakawa/current&&npx prisma generate'
       - name: Create environment variables
         run: |
           ssh private "cat > /opt/app/donakawa/current/.env <<'EOF'
