--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -18,7 +18,7 @@ jobs:
           node-version: "24"
           cache: "npm"
       - name: Install dependencies
-        run: npm ci
+        run: npm ci --omit=dev
       - name: Build
         run: npx prisma generate&&npm run build
       - name: Pack artifact
