--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -18,9 +18,11 @@ jobs:
           node-version: "24"
           cache: "npm"
       - name: Install dependencies
-        run: npm ci --omit=dev
-      - name: Build
+        run: npm ci
+      - name: Generate + Build
         run: npx prisma generate&&npm run build
+      - name: Prune devDependencies (runtime)
+        run: npm prune --omit=dev
       - name: Pack artifact
         run: |
           mkdir -p artifact
@@ -78,9 +80,8 @@ jobs:
           cd artifact
           rsync -az --delete \
             --exclude ".git" \
-            --exclude "node_modules" \
             --exclude ".env" \
-            ./dist ./prisma ./package.json ./package-lock.json ecosystem.config.js \
+            ./dist ./prisma ./node_modules ./package.json ./package-lock.json ecosystem.config.js \
             private:/opt/app/donakawa/incoming/
       - name: Switch Environment
         run: |
