--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -38,7 +38,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: app-artifact
-          path: artifact.tar.tgz
+          path: artifact.tgz
   deploy-A:
     runs-on: ubuntu-latest
     needs: build
