🔧 settings: CI/CD 파이프라인 수정

--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -51,7 +51,7 @@ jobs:
       - name: Extract artifact
         run: |
           mkdir -p artifact
-          tar -xzf app-artifact.tgz -C artifact
+          tar -xzf artifact.tgz -C artifact
       - name: Configure SSH
         run: |
           mkdir -p ~/.ssh
@@ -123,7 +123,7 @@ jobs:
       - name: Extract artifact
         run: |
           mkdir -p artifact
-          tar -xzf app-artifact.tgz -C artifact
+          tar -xzf artifact.tgz -C artifact
       - name: Configure SSH
         run: |
           mkdir -p ~/.ssh
