🔧 settings: CI/CD 파이프라인 수정

--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -47,7 +47,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: app-artifact
-          path: artifact
+          path: .
       - name: Extract artifact
         run: |
           mkdir -p artifact
@@ -119,7 +119,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: app-artifact
-          path: artifact
+          path: .
       - name: Extract artifact
         run: |
           mkdir -p artifact
